// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Reaction name="haha"/> snapshot should match snapshot 1`] = `
<Reaction
  name="haha"
>
  <div
    className="md-reaction-wrapper"
    data-size={12}
  />
</Reaction>
`;

exports[`<Reaction name="haha"/> snapshot should match snapshot with className 1`] = `
<Reaction
  className="example-class"
  name="haha"
>
  <div
    className="example-class md-reaction-wrapper"
    data-size={12}
  />
</Reaction>
`;

exports[`<Reaction name="haha"/> snapshot should match snapshot with id 1`] = `
<Reaction
  id="example-id"
  name="haha"
>
  <div
    className="md-reaction-wrapper"
    data-size={12}
    id="example-id"
  />
</Reaction>
`;

exports[`<Reaction name="haha"/> snapshot should match snapshot with style 1`] = `
<Reaction
  name="haha"
  style={
    Object {
      "color": "pink",
    }
  }
>
  <div
    className="md-reaction-wrapper"
    data-size={12}
    style={
      Object {
        "color": "pink",
      }
    }
  />
</Reaction>
`;
